# testbed_for_curved_surface

./: .gitignore  CMakeLists.txt
Matlab/: make_data_sphere.m
classes/: calculate_transformations.cpp  camera.cpp  coplanar_factor.cpp  coplanar_factor_new.cpp  data_load_module.cpp  opengl_point_processing.cpp  opengl_rendering.cpp  parameters_json.cpp  plane_measure_factor.cpp  plane_measure_factor_new.cpp  plane_measure_factor_test.cpp  shader.cpp  surfel_measure_factor.cpp  surfel_measure_factor_plane.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: calculate_transformations.h  camera.h  coplanar_factor.h  coplanar_factor_new.h  data_load_module.h  opengl_point_processing.h  opengl_rendering.h  parameters.h  parameters.json  parameters_json.h  plane_measure_factor.h  plane_measure_factor_new.h  plane_measure_factor_test.h  shader.h  surfel_measure_factor.h  surfel_measure_factor_plane.h  surfel_node.h  surfel_node_new.h
shaders/plane/with_texture/: fragment_shader.fs
shaders/point/: fragment_shader.fs
shaders/surfel/: fragment_shader.fs
src/: main.cpp
test/: json_test.cpp  test.cpp  test2.cpp  test3.cpp  test4.cpp
